# BUT-S6-refactory-exercise

./: CMakeLists.txt  README.md  build.sh  constantes.h  fonctions.cpp  fonctions.h  jeu.cpp  jeu.h  joueurs.cpp  joueurs.h  main.cpp
